fix: dot_preview background color spillover

--- a/packages/varlet-ui/src/color-picker/colorPicker.less
+++ b/packages/varlet-ui/src/color-picker/colorPicker.less
@@ -82,8 +82,6 @@
       div {
         width: 100%;
         height: 100%;
-        border-radius: inherit;
-        box-sizing: inherit;
       }
     }
     &__slider {
